Improved sale.py logic to handle customer payment days when grouping invoices. Task #175956

--- a/locale/ca.po
+++ b/locale/ca.po
@@ -7,7 +7,7 @@ msgid "Customer Payment Days"
 msgstr "Dies de pagament de client"
 
 msgctxt "model:ir.message,text:msg_customer_payment_days_required"
-msgid "Customer payment days are required for party \"%(party)s\"."
+msgid "To change the grouping period, customer payment days are required for party \"%(party)s\"."
 msgstr ""
-"Dies de pagament son requerits per al tercer "
+"Per canviar periode d'agrupació, dies de pagament son requerits per al tercer "
 "\"%(party)s\"."
