--- a/locale/es.po
+++ b/locale/es.po
@@ -7,7 +7,7 @@ msgid "Customer Payment Days"
 msgstr "Dias de pago de cliente"
 
 msgctxt "model:ir.message,text:msg_customer_payment_days_required"
-msgid "Customer payment days are required for party \"%(party)s\"."
+msgid "To change the grouping period, customer payment days are required for party \"%(party)s\"."
 msgstr ""
-"Dias de pago son requeridos para al tercero "
+"Para cambiar el periodo de agrupación, dias de pago son requeridos para al tercero "
 "\"%(party)s\"."
