--- a/locale/ca.po
+++ b/locale/ca.po
@@ -2,12 +2,19 @@
 msgid ""
 msgstr "Content-Type: text/plain; charset=utf-8\n"
 
+msgctxt "model:ir.message,text:msg_customer_payment_days_required"
+msgid ""
+"To use grouping period \"Customer Payment Dates\", customer payment days "
+"must be set for party \"%(party)s\"."
+msgstr ""
+"Per utilitzar el període d'agrupació \"Dates de pagament del client\", cal "
+"definir els dies de pagament del client pel tercer \"%(party)s\"."
+
 msgctxt "selection:party.party,sale_invoice_grouping_period:"
 msgid "Customer Payment Days"
 msgstr "Dies de pagament de client"
 
-msgctxt "model:ir.message,text:msg_customer_payment_days_required"
-msgid "To change the grouping period, customer payment days are required for party \"%(party)s\"."
-msgstr ""
-"Per canviar periode d'agrupació, dies de pagament son requerits per al tercer "
-"\"%(party)s\"."
+msgctxt ""
+"selection:party.party.sale_invoice_grouping_method,sale_invoice_grouping_period:"
+msgid "Customer Payment Days"
+msgstr "Dies de pagament client"
