--- a/locale/es.po
+++ b/locale/es.po
@@ -2,12 +2,19 @@
 msgid ""
 msgstr "Content-Type: text/plain; charset=utf-8\n"
 
+msgctxt "model:ir.message,text:msg_customer_payment_days_required"
+msgid ""
+"To use grouping period \"Customer Payment Dates\", customer payment days "
+"must be set for party \"%(party)s\"."
+msgstr ""
+"Para utilizar el período de agrupación \"Fechas de pago del cliente\", deben "
+"configurarse los días de pago del cliente para el tercero \"%(party)s\"."
+
 msgctxt "selection:party.party,sale_invoice_grouping_period:"
 msgid "Customer Payment Days"
 msgstr "Dias de pago de cliente"
 
-msgctxt "model:ir.message,text:msg_customer_payment_days_required"
-msgid "To change the grouping period, customer payment days are required for party \"%(party)s\"."
-msgstr ""
-"Para cambiar el periodo de agrupación, dias de pago son requeridos para al tercero "
-"\"%(party)s\"."
+msgctxt ""
+"selection:party.party.sale_invoice_grouping_method,sale_invoice_grouping_period:"
+msgid "Customer Payment Days"
+msgstr "Días de pagos cliente"
